bonus/mgomes-d2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mgomes-d-ingress2
  namespace: dev2
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  ingressClassName: nginx
  rules:
    - host: mgomesd.local2
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-mgomes-d
                port:
                  number: 80
